Updated page with an h1

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,6 +9,8 @@
 	<div class="pure-g">
     <div class="pure-u-1-5"></div>
     <div class="pure-u-3-5">
+    <h1>Gitreader</h1>
+    <h3>You know it. Type a name and let's see what they've got.</h3>
 		<form class="pure-form">
 			<input class="pure-input-1" type="text" id="search" placeholder='username'>
 			<!-- <button type="submit" class="pure-button pure-button-primary">Submit</button> -->
